--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Kunal Jha"
   pronouns         : # example: "she/her"  
-  bio              : "CS PhD student interested in multi-agent systems, theory-of-mind modeling, continual social learning"
+  bio              : "CS PhD Student interested in Multi-Agent systems, Theory-of-Mind Modeling, Continual Social Learning"
   location         : "Seattle"
   employer         : "University of Washington"
   uri              : # URL
