--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Twitter  # Replace this with your X / Twitter handle
+  twitter          : kjha02 # Replace this with your X / Twitter handle
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
@@ -120,7 +120,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : kjha02
 facebook:
   username               :
   app_id                 :
