trying to fix wrapping

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Kunal Jha"
   pronouns         : # example: "she/her"  
-  bio              : "CS PhD Student interested in Multi-Agent systems, Theory-of-Mind Modeling,<br>Continual Social Learning"
+  bio              : "CS PhD Student working on Multi-Agent systems, Theory-of-Mind Modeling,<br>Continual Social Learning"
   location         : "Seattle"
   employer         : "University of Washington"
   uri              : # URL
